# frictionless-synth

./: .gitignore  README.md  pyproject.toml
src/faker_frictionless/: common.py  config.py  frictionless.py  generators.py  models.py  tests.py
src/frictionless_synth/: cli.py  config.py  frictionless.py  generators.py  models.py
