[project]
name = "faker-frictionless"
version = "0.0.1"
description = "Fake frictionless data generator"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "frictionless>=5.15.10",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"faker_frictionless" = ["py.typed"]

[project.scripts]
ffaker = "faker_frictionless.tests:cli"