[project]
name = "frictionless-synth"
version = "0.0.1"
description = "Frictionless synthetic data generator"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "frictionless>=5.15.10",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"frictionless_synth" = ["py.typed"]

[project.scripts]
flssynth = "frictionless_synth.cli:cli"
